--- a/DepartmentDashboard.html
+++ b/DepartmentDashboard.html
@@ -1418,6 +1418,7 @@ function createProjectCard(projectName, tasks, status) {
                 loadData();
             }
         }, 900000);
+        loadData();
     </script>
 </body>
 </html>
