--- a/DepartmentTaskManagement.html
+++ b/DepartmentTaskManagement.html
@@ -1017,6 +1017,7 @@
             const today = new Date().toISOString().split('T')[0];
             document.getElementById('startDate').value = today;
         }
+        loadTasks();
     </script>
 </body>
 </html>
