--- a/DepartmentTaskManagementV3.html
+++ b/DepartmentTaskManagementV3.html
@@ -484,7 +484,7 @@
         <div id="alertContainer"></div>
 
         <div class="actions-bar">
-            <button class="btn btn-info" onclick="window.location.href='DepartmentDashboard.html'">
+            <button class="btn btn-info" onclick="window.location.href='DepartmentDashboardV3.html'">
                 ← Back to Dashboard
             </button>
             
