--- a/DepartmentDashboardV3.html
+++ b/DepartmentDashboardV3.html
@@ -1423,11 +1423,11 @@ function createProjectCard(projectName, tasks, status) {
 // document.addEventListener('contextmenu', event => event.preventDefault());
 
 // // Disable specific key combinations
-document.addEventListener('keydown', event => {
-  // F12
-  if (event.key === 'F12') {
-    event.preventDefault();
-  }
+// document.addEventListener('keydown', event => {
+//   // F12
+//   if (event.key === 'F12') {
+//     event.preventDefault();
+//   }
 
 //   // Ctrl + Shift + I
 //   if (event.ctrlKey && event.shiftKey && event.key.toLowerCase() === 'i') {
