--- a/DepartmentTaskManagementV3.html
+++ b/DepartmentTaskManagementV3.html
@@ -1222,41 +1222,41 @@
      document.addEventListener('contextmenu', event => event.preventDefault());
 
 // Disable specific key combinations
-document.addEventListener('keydown', event => {
-  // F12
-  if (event.key === 'F12') {
-    event.preventDefault();
-  }
+// document.addEventListener('keydown', event => {
+//   // F12
+//   if (event.key === 'F12') {
+//     event.preventDefault();
+//   }
 
-  // Ctrl + Shift + I
-  if (event.ctrlKey && event.shiftKey && event.key.toLowerCase() === 'i') {
-    event.preventDefault();
-  }
+//   // Ctrl + Shift + I
+//   if (event.ctrlKey && event.shiftKey && event.key.toLowerCase() === 'i') {
+//     event.preventDefault();
+//   }
 
-  // Ctrl + Shift + J (console)
-  if (event.ctrlKey && event.shiftKey && event.key.toLowerCase() === 'j') {
-    event.preventDefault();
-  }
+//   // Ctrl + Shift + J (console)
+//   if (event.ctrlKey && event.shiftKey && event.key.toLowerCase() === 'j') {
+//     event.preventDefault();
+//   }
 
-  // Ctrl + U (view source)
-  if (event.ctrlKey && event.key.toLowerCase() === 'u') {
-    event.preventDefault();
-  }
+//   // Ctrl + U (view source)
+//   if (event.ctrlKey && event.key.toLowerCase() === 'u') {
+//     event.preventDefault();
+//   }
 
-  // Ctrl + S (save page)
-  if (event.ctrlKey && event.key.toLowerCase() === 's') {
-    event.preventDefault();
-  }
+//   // Ctrl + S (save page)
+//   if (event.ctrlKey && event.key.toLowerCase() === 's') {
+//     event.preventDefault();
+//   }
 
-  // Ctrl + C (copy)
-  if (event.ctrlKey && event.key.toLowerCase() === 'c') {
-    event.preventDefault();
-  }
-});
- if (event.ctrlKey && event.key.toLowerCase() === 'p') {
-    event.preventDefault();
-  }
-});
+//   // Ctrl + C (copy)
+//   if (event.ctrlKey && event.key.toLowerCase() === 'c') {
+//     event.preventDefault();
+//   }
+// });
+//  if (event.ctrlKey && event.key.toLowerCase() === 'p') {
+//     event.preventDefault();
+//   }
+// });
     </script>
 </body>
 </html>
